fixes alignment on mobile nav

--- a/src/App/Components/Navbar/Navbar.module.scss
+++ b/src/App/Components/Navbar/Navbar.module.scss
@@ -2,7 +2,7 @@
 .navContainer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   position: sticky; 
   top: 0;
   background-color: var(--nav-and-ft-bg-clr);
