--- a/src/App/Components/Navbar/_MobileNav/_MobileNav.module.scss
+++ b/src/App/Components/Navbar/_MobileNav/_MobileNav.module.scss
@@ -11,8 +11,9 @@
   overflow-y: scroll;
   transition: right 0.5s ease-in-out;
   overflow: hidden;
+
   ul {
-    padding-left: 0;
+    margin-top: 4em;
   }
   li {
     cursor: pointer;
@@ -24,8 +25,7 @@
   @include tabletAndDown {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-end;
     width: 350px;
   }
   @include mobile {
@@ -76,8 +76,9 @@
 .mobileMenu {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
+  margin-right: 1.3em;
   li {
     margin: var(--sp-sm) 0;
     opacity: 0;
